feat: update pre-commit hook to include type checking and simplify lint-staged configuration

--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "pnpm typecheck"
+      "eslint --fix"
     ]
   }
 }
