--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint --fix",
     "typecheck": "tsc --noEmit",
     "prepare": "husky install"
   },
@@ -24,11 +24,12 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.2",
+    "eslint-config-standard": "^17.1.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "husky": "^8.0.0",
-    "lint-staged": "^15.0.0"
+    "typescript": "^5"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
