--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.6",
+    "axios": "^0.21.1",
+    "dotenv": "^16.4.5",
     "next": "15.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
