--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@google/generative-ai": "^0.21.0",
+    "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
     "axios": "^0.21.1",
     "dotenv": "^16.4.5",
