--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next": "15.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
