--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "15.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-redux": "^9.1.2",
     "uuid": "^11.0.2"
   },
@@ -29,6 +30,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-helmet": "^6.1.11",
     "eslint": "^8",
     "eslint-config-next": "15.0.2",
     "eslint-config-standard": "^17.1.0",
