--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-redux": "^9.1.2",
-    "uuid": "^11.0.2"
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
